SUBDIRS = src

TESTS = \
	test-xserver-fail-start \
	test-greeter-fail-start \
	test-greeter-not-installed \
	test-greeter-xserver-crash \
	test-greeter-wrapper \
	test-greeter-default-session \
	test-greeter-allow-guest \
	test-greeter-hide-users \
	test-greeter-show-manual-login \
	test-greeter-show-remote-login \
	test-no-config \
	test-additional-config \
	test-headless \
	test-autologin \
	test-autologin-in-background \
	test-autologin-guest-in-background \
	test-autologin-timeout-in-background \
	test-autologin-invalid-user \
	test-autologin-invalid-session \
	test-crash-authenticate \
	test-autologin-xserver-crash \
	test-autologin-session-crash \
	test-autologin-password \
	test-autologin-new-authtok \
	test-autologin-gobject-timeout \
	test-autologin-gobject-guest-timeout \
	test-autologin-python-timeout \
	test-autologin-python-guest-timeout \
	test-change-authentication \
	test-restart-authentication \
	test-gobject-cancel-authentication \
	test-python-cancel-authentication \
	test-pam \
	test-login-pam \
	test-denied \
	test-expired \
	test-cred-error \
	test-cred-expired \
	test-cred-unavail \
	test-autologin-session-error \
	test-autologin-logout \
	test-autologin-previous-session \
	test-autologin-guest \
	test-autologin-guest-fail-setup-script \
	test-autologin-guest-logout \
	test-group-membership \
	test-session-env \
	test-language-env \
	test-util-path \
	test-session-stdout \
	test-session-stderr \
	test-session-stderr-multi-write \
	test-session-stderr-backup \
	test-xauthority \
	test-system-xauthority \
	test-user-renamed \
	test-user-renamed-invalid \
	test-users-gobject \
	test-users-python \
	test-keyboard-layout \
	test-no-keyboard-layout \
	test-language \
	test-no-language \
	test-language-no-accounts-service \
	test-login-crash-authenticate \
	test-login-gobject \
	test-login-gobject-manual \
	test-login-gobject-manual-previous-session \
	test-login-gobject-no-password \
	test-login-gobject-long-username \
	test-login-gobject-long-password \
	test-login-gobject-two-factor \
	test-login-gobject-new-authtok \
	test-login-gobject-info-prompt \
	test-login-gobject-multi-info-prompt \
	test-login-gobject-multi-prompt \
	test-login-gobject-pick-session \
	test-login-gobject-remember-session \
	test-login-gobject-previous-session \
	test-login-gobject-wrong-password \
	test-login-gobject-invalid-user \
	test-login-gobject-invalid-session \
	test-login-gobject-logout \
	test-login-gobject-guest \
	test-login-gobject-guest-disabled \
	test-login-gobject-guest-no-setup-script \
	test-login-gobject-guest-fail-setup-script \
	test-login-gobject-guest-logout \
	test-login-gobject-remote-session \
	test-login-python \
	test-login-python-manual \
	test-login-python-manual-previous-session \
	test-login-python-no-password \
	test-login-python-long-username \
	test-login-python-long-password \
	test-login-python-two-factor \
	test-login-python-new-authtok \
	test-login-python-info-prompt \
	test-login-python-multi-info-prompt \
	test-login-python-previous-session \
	test-login-python-wrong-password \
	test-login-python-invalid-user \
	test-login-python-invalid-session \
	test-login-python-logout \
	test-login-python-pick-session \
	test-login-python-remember-session \
	test-login-python-guest \
	test-login-python-guest-disabled \
	test-login-python-guest-no-setup-script \
	test-login-python-guest-fail-setup-script \
	test-login-python-guest-logout \
	test-login-python-remote-session \
	test-login-session-crash \
	test-login-xserver-crash \
	test-xserver-no-share \
	test-home-dir-on-authenticate \
	test-home-dir-on-session \
	test-plymouth-active-vt \
	test-plymouth-inactive-vt \
	test-plymouth-no-seat \
	test-script-hooks \
	test-script-hook-fail-display-setup \
	test-script-hook-fail-greeter-setup \
	test-script-hook-fail-session-setup \
	test-upstart-autologin \
	test-upstart-login \
	test-dbus \
	test-lock-seat \
	test-lock-seat-return-session \
	test-lock-session \
	test-lock-session-no-password \
	test-lock-session-return-session \
	test-switch-to-greeter \
	test-switch-to-greeter-new-session \
	test-switch-to-greeter-new-session-logout-new \
	test-switch-to-greeter-new-session-logout-old \
	test-switch-to-greeter-return-session \
	test-switch-to-greeter-return-session-logout \
	test-switch-to-guest \
	test-switch-to-user \
	test-switch-to-users \
	test-switch-to-user-existing-session \
	test-switch-to-user-no-password \
	test-switch-to-user-logout \
	test-vnc-login \
	test-vnc-command \
	test-vnc-dimensions \
	test-vnc-open-file-descriptors \
	test-xdmcp-client \
	test-xdmcp-server-login \
	test-no-accounts-service \
	test-console-kit \
	test-no-console-kit \
	test-login1 \
	test-no-login1 \
	test-no-console-kit-or-login1 \
	test-gobject-power \
	test-gobject-power-no-console-kit \
	test-gobject-power-no-login1 \
	test-gobject-power-no-services \
	test-python-power \
	test-python-power-no-console-kit \
	test-python-power-no-login1 \
	test-python-power-no-services \
	test-open-file-descriptors \
	test-xdmcp-server-open-file-descriptors \
	test-unity-compositor-command \
	test-unity-compositor-fail-start \
	test-unity-compositor-fail-ready \
	test-unity-autologin \
	test-unity-login \
	test-unity-switch \
	test-unity-plymouth

#	test-session-exit-error
#	test-greeter-no-exit
#   test-gobject-change-password
#   test-qt-change-password
#   test-autologin-create-directory

if COMPILE_LIBLIGHTDM_QT4
TESTS += \
	test-autologin-qt4-timeout \
	test-autologin-qt4-guest-timeout \
	test-qt4-cancel-authentication \
	test-login-qt4 \
	test-login-qt4-manual \
	test-login-qt4-manual-previous-session \
	test-login-qt4-no-password \
	test-login-qt4-long-username \
	test-login-qt4-long-password \
	test-login-qt4-two-factor \
	test-login-qt4-new-authtok \
	test-login-qt4-info-prompt \
	test-login-qt4-multi-info-prompt \
	test-login-qt4-previous-session \
	test-login-qt4-wrong-password \
	test-login-qt4-invalid-user \
	test-login-qt4-invalid-session \
	test-login-qt4-logout \
	test-login-qt4-pick-session \
	test-login-qt4-remember-session \
	test-login-qt4-guest \
	test-login-qt4-guest-disabled \
	test-login-qt4-guest-no-setup-script \
	test-login-qt4-guest-fail-setup-script \
	test-login-qt4-guest-logout \
	test-login-qt4-remote-session \
	test-users-qt4 \
	test-qt4-power \
	test-qt4-power-no-console-kit \
	test-qt4-power-no-login1 \
	test-qt4-power-no-services
endif

if COMPILE_LIBLIGHTDM_QT5
TESTS += \
	test-autologin-qt5-timeout \
	test-autologin-qt5-guest-timeout \
	test-qt5-cancel-authentication \
	test-login-qt5 \
	test-login-qt5-manual \
	test-login-qt5-manual-previous-session \
	test-login-qt5-no-password \
	test-login-qt5-long-username \
	test-login-qt5-long-password \
	test-login-qt5-two-factor \
	test-login-qt5-new-authtok \
	test-login-qt5-info-prompt \
	test-login-qt5-multi-info-prompt \
	test-login-qt5-previous-session \
	test-login-qt5-wrong-password \
	test-login-qt5-invalid-user \
	test-login-qt5-invalid-session \
	test-login-qt5-logout \
	test-login-qt5-pick-session \
	test-login-qt5-remember-session \
	test-login-qt5-guest \
	test-login-qt5-guest-disabled \
	test-login-qt5-guest-no-setup-script \
	test-login-qt5-guest-fail-setup-script \
	test-login-qt5-guest-logout \
	test-login-qt5-remote-session \
	test-users-qt5 \
	test-qt5-power \
	test-qt5-power-no-console-kit \
	test-qt5-power-no-login1 \
	test-qt5-power-no-services
endif

EXTRA_DIST = \
	$(TESTS) \
	data/remote-sessions/test-remote.desktop \
	data/system.conf \
	data/session.conf \
	data/greeters/test-gobject-greeter.desktop \
	data/greeters/test-python-greeter.desktop \
	data/greeters/test-qt4-greeter.desktop \
	data/greeters/test-qt5-greeter.desktop \
	data/sessions/alternative.desktop \
	data/sessions/default.desktop \
	scripts/0-additional.conf \
	scripts/1-additional.conf \
	scripts/additional-config.conf \
	scripts/autologin.conf \
	scripts/autologin-guest.conf \
	scripts/autologin-guest-fail-setup-script.conf \
	scripts/autologin-guest-logout.conf \
	scripts/autologin-guest-timeout.conf \
	scripts/autologin-in-background.conf \
	scripts/autologin-guest-in-background.conf \
	scripts/autologin-timeout-in-background.conf \
	scripts/autologin-invalid-session.conf \
	scripts/autologin-invalid-user.conf \
	scripts/autologin-logout.conf \
	scripts/autologin-new-authtok.conf \
	scripts/autologin-password.conf \
	scripts/autologin-previous-session.conf \
	scripts/autologin-session-crash.conf \
	scripts/autologin-session-error.conf \
	scripts/autologin-timeout.conf \
	scripts/autologin-xserver-crash.conf \
	scripts/change-authentication.conf \
	scripts/cancel-authentication.conf \
	scripts/console-kit.conf \
	scripts/crash-authenticate.conf \
	scripts/cred-error.conf \
	scripts/cred-expired.conf \
	scripts/cred-unavail.conf \
	scripts/dbus.conf \    
	scripts/denied.conf \
	scripts/expired.conf \
	scripts/greeter-allow-guest.conf \
	scripts/greeter-default-session.conf \
	scripts/greeter-fail-start.conf \
	scripts/greeter-hide-users.conf \
	scripts/greeter-not-installed.conf \
	scripts/greeter-show-manual-login.conf \
	scripts/greeter-show-remote-login.conf \
	scripts/greeter-wrapper.conf \
	scripts/greeter-xserver-crash.conf \
	scripts/group-membership.conf \
	scripts/headless.conf \
	scripts/home-dir-on-authenticate.conf \
	scripts/home-dir-on-session.conf \
	scripts/keyboard-layout.conf \
	scripts/language.conf \
	scripts/language-env.conf \
	scripts/language-no-accounts-service.conf \
	scripts/lock-seat.conf \
	scripts/lock-seat-return-session.conf \
	scripts/lock-session.conf \
	scripts/lock-session-no-password.conf \
	scripts/lock-session-return-session.conf \
	scripts/login1.conf \
	scripts/login.conf \
	scripts/login-crash-authenticate.conf \
	scripts/login-guest.conf \
	scripts/login-guest-disabled.conf \
	scripts/login-guest-fail-setup-script.conf \
	scripts/login-guest-logout.conf \
	scripts/login-guest-no-setup-script.conf \
	scripts/login-info-prompt.conf \
	scripts/login-invalid-session.conf \
	scripts/login-invalid-user.conf \
	scripts/login-logout.conf \
	scripts/login-long-username.conf \
	scripts/login-long-password.conf \
	scripts/login-manual.conf \
	scripts/login-manual-previous-session.conf \
	scripts/login-multi-info-prompt.conf \
	scripts/login-multi-prompt.conf \
	scripts/login-new-authtok.conf \
	scripts/login-no-password.conf \
	scripts/login-pam.conf \
	scripts/login-pick-session.conf \
	scripts/login-previous-session.conf \
	scripts/login-remember-session.conf \
	scripts/login-remote-session.conf \
	scripts/login-session-crash.conf \
	scripts/login-two-factor.conf \
	scripts/login-wrong-password.conf \
	scripts/login-xserver-crash.conf \
	scripts/no-accounts-service.conf \
	scripts/no-config.conf \
	scripts/no-console-kit.conf \
	scripts/no-console-kit-or-login1.conf \
	scripts/no-keyboard-layout.conf \
	scripts/no-language.conf \
	scripts/no-login1.conf \
	scripts/open-file-descriptors.conf \
	scripts/pam.conf \
	scripts/power.conf \
	scripts/power-no-console-kit.conf \
	scripts/power-no-services.conf \
	scripts/power-no-login1.conf \
	scripts/plymouth-active-vt.conf \
	scripts/plymouth-inactive-vt.conf \
	scripts/plymouth-no-seat.conf \
	scripts/restart-authentication.conf \
	scripts/script-hooks.conf \
	scripts/script-hook-fail-display-setup.conf \
	scripts/script-hook-fail-greeter-setup.conf \
	scripts/script-hook-fail-session-setup.conf \
	scripts/session-env.conf \
	scripts/session-stdout.conf \
	scripts/session-stderr.conf \
	scripts/session-stderr-multi-write.conf \
	scripts/session-stderr-backup.conf \
	scripts/switch-to-greeter.conf \
	scripts/switch-to-greeter-new-session.conf \
	scripts/switch-to-greeter-new-session-logout-new.conf \
	scripts/switch-to-greeter-new-session-logout-old.conf \
	scripts/switch-to-greeter-return-session.conf \
	scripts/switch-to-greeter-return-session-logout.conf \
	scripts/switch-to-guest.conf \
	scripts/switch-to-user.conf \
	scripts/switch-to-users.conf \
	scripts/switch-to-user-existing-session.conf \
	scripts/switch-to-user-logout.conf \
	scripts/switch-to-user-no-password.conf \
	scripts/system-xauthority.conf \
	scripts/unity-autologin.conf \
	scripts/unity-compositor-command.conf \
	scripts/unity-compositor-fail-ready.conf \
	scripts/unity-compositor-fail-start.conf \
	scripts/unity-login.conf \
	scripts/unity-plymouth.conf \
	scripts/unity-switch.conf \
	scripts/upstart-autologin.conf \
	scripts/upstart-login.conf \
	scripts/users.conf \
	scripts/util-path.conf \
	scripts/user-renamed.conf \
	scripts/user-renamed-invalid.conf \
	scripts/vnc-command.conf \
	scripts/vnc-dimensions.conf \
	scripts/vnc-login.conf \
	scripts/vnc-open-file-descriptors.conf \
	scripts/xauthority.conf \
	scripts/xdmcp-client.conf \
	scripts/xdmcp-server-login.conf \
	scripts/xdmcp-server-open-file-descriptors.conf \
	scripts/xserver-fail-start.conf \
	scripts/xserver-no-share.conf
