SUBDIRS = src

TESTS = \
	test-xserver-fail-start \
	test-greeter-fail-start \
	test-greeter-not-installed \
	test-greeter-xserver-crash \
	test-greeter-crash \
	test-greeter-wrapper \
	test-greeter-default-session \
	test-greeter-allow-guest \
	test-greeter-hide-users \
	test-greeter-show-manual-login \
	test-greeter-show-remote-login \
	test-no-config \
	test-additional-config \
	test-additional-config-priority \
	test-additional-system-config \
	test-additional-system-config-priority \
	test-headless \
	test-autologin \
	test-autologin-pam \
	test-autologin-pam-config \
	test-autologin-in-background \
	test-autologin-guest-in-background \
	test-autologin-timeout-in-background \
	test-autologin-invalid-user \
	test-autologin-invalid-greeter \
	test-autologin-invalid-session \
	test-crash-authenticate \
	test-autologin-xserver-crash \
	test-autologin-session-crash \
	test-autologin-password \
	test-autologin-new-authtok \
	test-autologin-timeout-gobject \
	test-autologin-guest-timeout-gobject \
	test-change-authentication \
	test-restart-authentication \
	test-cancel-authentication-gobject \
	test-login-pam \
	test-login-pam-config \
	test-denied \
	test-expired \
	test-cred-error \
	test-cred-expired \
	test-cred-unavail \
	test-autologin-session-error \
	test-autologin-logout \
	test-autologin-timeout-logout \
	test-autologin-previous-session \
	test-autologin-guest \
	test-autologin-guest-session-config \
	test-autologin-guest-fail-setup-script \
	test-autologin-guest-logout \
	test-guest-wrapper \
	test-login-guest-session-config \
	test-group-membership \
	test-xdg-current-desktop \
	test-language-env \
	test-session-stdout \
	test-session-stderr \
	test-session-stderr-multi-write \
	test-session-stderr-backup \
	test-xauthority \
	test-corrupt-xauthority \
	test-system-xauthority \
	test-user-renamed \
	test-user-renamed-invalid \
	test-user-name \
	test-user-uid \
	test-user-image \
	test-user-background \
	test-user-layout \
	test-user-has-messages \
	test-user-session \
	test-user-logged-in \
	test-users-gobject \
	test-language \
	test-language-no-accounts-service \
	test-login-crash-authenticate \
	test-login-invalid-greeter \
	test-login-gobject \
	test-login-manual-gobject \
	test-login-manual-previous-session-gobject \
	test-login-no-password-gobject \
	test-login-long-username-gobject \
	test-login-long-password-gobject \
	test-login-two-factor-gobject \
	test-login-new-authtok-gobject \
	test-login-info-prompt-gobject \
	test-login-multi-info-prompt-gobject \
	test-login-multi-prompt-gobject \
	test-login-pick-session-gobject \
	test-login-remember-session-gobject \
	test-login-manual-remember-session-gobject \
	test-login-previous-session-gobject \
	test-login-wrong-password-gobject \
	test-login-invalid-user-gobject \
	test-login-invalid-session-gobject \
	test-login-logout-gobject \
	test-login-guest-gobject \
	test-login-guest-pick-session-gobject \
	test-login-guest-disabled-gobject \
	test-login-guest-no-setup-script-gobject \
	test-login-guest-fail-setup-script-gobject \
	test-login-guest-logout-gobject \
	test-login-remote-session-gobject \
	test-login-session-crash \
	test-login-xserver-crash \
	test-xserver-no-share \
	test-home-dir-on-authenticate \
	test-home-dir-on-session \
	test-plymouth-active-vt \
	test-plymouth-inactive-vt \
	test-plymouth-no-seat \
	test-script-hooks \
	test-script-hook-display-setup-fail \
	test-script-hook-display-setup-missing \
	test-script-hook-greeter-setup-fail \
	test-script-hook-greeter-setup-missing \
	test-script-hook-session-setup-fail \
	test-script-hook-session-setup-missing \
	test-shared-data-greeter-to-session \
	test-shared-data-session-to-greeter \
	test-shared-data-session-to-greeter-autologin \
	test-shared-data-invalid-user \
	test-upstart-autologin \
	test-upstart-login \
	test-dbus \
	test-lock-seat \
	test-lock-seat-resettable \
	test-lock-seat-return-session \
	test-lock-session \
	test-lock-session-no-password \
	test-lock-session-resettable \
	test-lock-session-return-session \
	test-lock-seat-console-kit \
	test-lock-seat-return-session-console-kit \
	test-switch-to-greeter \
	test-switch-to-greeter-disabled \
	test-switch-to-greeter-new-session \
	test-switch-to-greeter-resettable \
	test-switch-to-greeter-return-session \
	test-switch-to-greeter-return-session-pam \
	test-switch-to-greeter-return-session-logout \
	test-switch-to-guest \
	test-switch-to-guest-disabled \
	test-switch-to-guest-fail-resettable \
	test-switch-to-user \
	test-switch-to-user-disabled \
	test-switch-to-user-no-password \
	test-switch-to-user-active \
	test-switch-to-user-existing \
	test-switch-to-user-existing-no-password \
	test-switch-to-user-existing-resettable \
	test-switch-to-user-logout-active \
	test-switch-to-user-logout-active-resettable \
	test-switch-to-user-logout-inactive \
	test-switch-to-user-resettable \
	test-switch-to-users \
	test-vnc-login \
	test-vnc-command \
	test-vnc-dimensions \
	test-vnc-open-file-descriptors \
	test-xdmcp-client \
	test-xdmcp-server-autologin \
	test-xdmcp-server-login \
	test-xdmcp-server-double-login \
	test-utmp-login \
	test-utmp-autologin \
	test-utmp-wrong-password \
	test-no-accounts-service \
	test-console-kit \
	test-no-console-kit \
	test-no-login1 \
	test-no-console-kit-or-login1 \
	test-power-gobject \
	test-power-no-console-kit-gobject \
	test-power-no-login1-gobject \
	test-power-no-services-gobject \
	test-open-file-descriptors \
	test-xdmcp-server-open-file-descriptors \
	test-multi-seat \
	test-multi-seat-non-graphical \
	test-multi-seat-change-graphical \
	test-multi-seat-globbing-config-sections \
	test-mir-autologin \
	test-mir-greeter \
	test-mir-session \
	test-mir-session-crash \
	test-mir-session-compositor-crash \
	test-mir-container-session \
	test-unity-compositor-command \
	test-unity-compositor-not-found \
	test-unity-compositor-fail-start \
	test-unity-compositor-fail-ready \
	test-unity-compositor-crash \
	test-unity-compositor-fallback \
	test-unity-compositor-next-session \
	test-unity-compositor-mir-next-session \
	test-unity-autologin \
	test-unity-login \
	test-unity-switch \
	test-unity-plymouth \
	test-unity-mir-autologin \
	test-unity-mir-greeter-x-session \
	test-unity-mir-greeter-mir-session \
	test-unity-mir-lock-seat \
	test-unity-mir-session-x-greeter \
	test-unity-mir-switch \
	test-unity-mir-switch-to-user-resettable

#	test-session-exit-error
#	test-greeter-no-exit
#   test-change-password-gobject
#   test-change-password-qt
#   test-autologin-create-directory

TESTS += \
	test-cancel-authentication-python \
	test-users-python \
	test-login-python \
	test-login-manual-python \
	test-login-manual-previous-session-python \
	test-login-no-password-python \
	test-login-long-username-python \
	test-login-long-password-python \
	test-login-two-factor-python \
	test-login-new-authtok-python \
	test-login-info-prompt-python \
	test-login-multi-info-prompt-python \
	test-login-previous-session-python \
	test-login-wrong-password-python \
	test-login-invalid-user-python \
	test-login-invalid-session-python \
	test-login-logout-python \
	test-login-pick-session-python \
	test-login-remember-session-python \
	test-login-manual-remember-session-python \
	test-login-guest-python \
	test-login-guest-pick-session-python \
	test-login-guest-disabled-python \
	test-login-guest-no-setup-script-python \
	test-login-guest-fail-setup-script-python \
	test-login-guest-logout-python \
	test-login-remote-session-python \
	test-autologin-timeout-python \
	test-autologin-guest-timeout-python \
	test-power-python \
	test-power-no-console-kit-python \
	test-power-no-login1-python \
	test-power-no-services-python

if COMPILE_LIBLIGHTDM_QT4
TESTS += \
	test-autologin-timeout-qt4 \
	test-autologin-guest-timeout-qt4 \
	test-cancel-authentication-qt4 \
	test-login-qt4 \
	test-login-manual-qt4 \
	test-login-manual-previous-session-qt4 \
	test-login-no-password-qt4 \
	test-login-long-username-qt4 \
	test-login-long-password-qt4 \
	test-login-two-factor-qt4 \
	test-login-new-authtok-qt4 \
	test-login-info-prompt-qt4 \
	test-login-multi-info-prompt-qt4 \
	test-login-previous-session-qt4 \
	test-login-wrong-password-qt4 \
	test-login-invalid-user-qt4 \
	test-login-invalid-session-qt4 \
	test-login-logout-qt4 \
	test-login-pick-session-qt4 \
	test-login-remember-session-qt4 \
	test-login-manual-remember-session-qt4 \
	test-login-guest-qt4 \
	test-login-guest-pick-session-qt4 \
	test-login-guest-disabled-qt4 \
	test-login-guest-no-setup-script-qt4 \
	test-login-guest-fail-setup-script-qt4 \
	test-login-guest-logout-qt4 \
	test-login-remote-session-qt4 \
	test-users-qt4 \
	test-power-qt4 \
	test-power-no-console-kit-qt4 \
	test-power-no-login1-qt4 \
	test-power-no-services-qt4
endif

if COMPILE_LIBLIGHTDM_QT5
TESTS += \
	test-autologin-timeout-qt5 \
	test-autologin-guest-timeout-qt5 \
	test-cancel-authentication-qt5 \
	test-login-qt5 \
	test-login-manual-qt5 \
	test-login-manual-previous-session-qt5 \
	test-login-no-password-qt5 \
	test-login-long-username-qt5 \
	test-login-long-password-qt5 \
	test-login-two-factor-qt5 \
	test-login-new-authtok-qt5 \
	test-login-info-prompt-qt5 \
	test-login-multi-info-prompt-qt5 \
	test-login-previous-session-qt5 \
	test-login-wrong-password-qt5 \
	test-login-invalid-user-qt5 \
	test-login-invalid-session-qt5 \
	test-login-logout-qt5 \
	test-login-pick-session-qt5 \
	test-login-remember-session-qt5 \
	test-login-manual-remember-session-qt5 \
	test-login-guest-qt5 \
	test-login-guest-pick-session-qt5 \
	test-login-guest-disabled-qt5 \
	test-login-guest-no-setup-script-qt5 \
	test-login-guest-fail-setup-script-qt5 \
	test-login-guest-logout-qt5 \
	test-login-remote-session-qt5 \
	test-users-qt5 \
	test-power-qt5 \
	test-power-no-console-kit-qt5 \
	test-power-no-login1-qt5 \
	test-power-no-services-qt5
endif

EXTRA_DIST = \
	$(TESTS) \
	data/remote-sessions/test-remote.desktop \
	data/system.conf \
	data/session.conf \
	data/greeters/test-gobject-greeter.desktop \
	data/greeters/test-mir-greeter.desktop \
	data/greeters/test-python-greeter.desktop \
	data/greeters/test-qt4-greeter.desktop \
	data/greeters/test-qt5-greeter.desktop \
	data/sessions/alternative.desktop \
	data/sessions/default.desktop \
	data/sessions/mir.desktop \
	data/sessions/mir-container.desktop \
	data/sessions/named.desktop \
	scripts/0-additional.conf \
	scripts/1-additional.conf \
	scripts/additional-config.conf \
	scripts/additional-config-priority.conf \
	scripts/additional-system-config.conf \
	scripts/additional-system-config-priority.conf \
	scripts/autologin.conf \
	scripts/autologin-guest.conf \
	scripts/autologin-guest-fail-setup-script.conf \
	scripts/autologin-guest-in-background.conf \
	scripts/autologin-guest-logout.conf \
	scripts/autologin-guest-session-config.conf \
	scripts/autologin-guest-timeout.conf \
	scripts/autologin-in-background.conf \
	scripts/autologin-invalid-greeter.conf \
	scripts/autologin-pam.conf \
	scripts/autologin-pam-config.conf \
	scripts/autologin-invalid-session.conf \
	scripts/autologin-invalid-user.conf \
	scripts/autologin-logout.conf \
	scripts/autologin-new-authtok.conf \
	scripts/autologin-password.conf \
	scripts/autologin-previous-session.conf \
	scripts/autologin-session-crash.conf \
	scripts/autologin-session-error.conf \
	scripts/autologin-timeout.conf \
	scripts/autologin-timeout-in-background.conf \
	scripts/autologin-timeout-logout.conf \
	scripts/autologin-xserver-crash.conf \
	scripts/change-authentication.conf \
	scripts/cancel-authentication.conf \
	scripts/console-kit.conf \
	scripts/corrupt-xauthority.conf \
	scripts/crash-authenticate.conf \
	scripts/cred-error.conf \
	scripts/cred-expired.conf \
	scripts/cred-unavail.conf \
	scripts/dbus.conf \
	scripts/denied.conf \
	scripts/expired.conf \
	scripts/greeter-allow-guest.conf \
	scripts/greeter-crash.conf \
	scripts/greeter-default-session.conf \
	scripts/greeter-fail-start.conf \
	scripts/greeter-hide-users.conf \
	scripts/greeter-not-installed.conf \
	scripts/greeter-show-manual-login.conf \
	scripts/greeter-show-remote-login.conf \
	scripts/greeter-wrapper.conf \
	scripts/greeter-xserver-crash.conf \
	scripts/group-membership.conf \
	scripts/guest-wrapper.conf \
	scripts/headless.conf \
	scripts/home-dir-on-authenticate.conf \
	scripts/home-dir-on-session.conf \
	scripts/language.conf \
	scripts/language-env.conf \
	scripts/language-no-accounts-service.conf \
	scripts/lock-seat.conf \
	scripts/lock-seat-console-kit.conf \    
	scripts/lock-seat-resettable.conf \
	scripts/lock-seat-return-session.conf \
	scripts/lock-seat-return-session-console-kit.conf \
	scripts/lock-session.conf \
	scripts/lock-session-no-password.conf \
	scripts/lock-session-resettable.conf \
	scripts/lock-session-return-session.conf \
	scripts/login.conf \
	scripts/login-crash-authenticate.conf \
	scripts/login-guest.conf \
	scripts/login-guest-disabled.conf \
	scripts/login-guest-fail-setup-script.conf \
	scripts/login-guest-logout.conf \
	scripts/login-guest-pick-session.conf \
	scripts/login-guest-no-setup-script.conf \
	scripts/login-guest-session-config.conf \
	scripts/login-info-prompt.conf \
	scripts/login-invalid-greeter.conf \
	scripts/login-invalid-session.conf \
	scripts/login-invalid-user.conf \
	scripts/login-logout.conf \
	scripts/login-long-username.conf \
	scripts/login-long-password.conf \
	scripts/login-manual.conf \
	scripts/login-manual-previous-session.conf \
	scripts/login-manual-remember-session.conf \
	scripts/login-multi-info-prompt.conf \
	scripts/login-multi-prompt.conf \
	scripts/login-new-authtok.conf \
	scripts/login-no-password.conf \
	scripts/login-pam.conf \
	scripts/login-pam-config.conf \
	scripts/login-pick-session.conf \
	scripts/login-previous-session.conf \
	scripts/login-remember-session.conf \
	scripts/login-remote-session.conf \
	scripts/login-session-crash.conf \
	scripts/login-two-factor.conf \
	scripts/login-wrong-password.conf \
	scripts/login-xserver-crash.conf \
	scripts/mir-autologin.conf \
	scripts/mir-container-session.conf \
	scripts/mir-greeter.conf \
	scripts/mir-session.conf \
	scripts/mir-session-compositor-crash.conf \
	scripts/mir-session-crash.conf \
	scripts/multi-seat.conf \
	scripts/multi-seat-non-graphical.conf \
	scripts/multi-seat-change-graphical.conf \
	scripts/multi-seat-globbing-config-sections.conf \
	scripts/no-accounts-service.conf \
	scripts/no-config.conf \
	scripts/no-console-kit.conf \
	scripts/no-console-kit-or-login1.conf \
	scripts/no-login1.conf \
	scripts/open-file-descriptors.conf \
	scripts/power.conf \
	scripts/power-no-console-kit.conf \
	scripts/power-no-services.conf \
	scripts/power-no-login1.conf \
	scripts/plymouth-active-vt.conf \
	scripts/plymouth-inactive-vt.conf \
	scripts/plymouth-no-seat.conf \
	scripts/restart-authentication.conf \
	scripts/shared-data-greeter-to-session.conf \
	scripts/shared-data-invalid-user.conf \
	scripts/shared-data-session-to-greeter.conf \
	scripts/shared-data-session-to-greeter-autologin.conf \
	scripts/script-hooks.conf \
	scripts/script-hook-display-setup-fail.conf \
	scripts/script-hook-display-setup-missing.conf \
	scripts/script-hook-greeter-setup-fail.conf \
	scripts/script-hook-greeter-setup-missing.conf \
	scripts/script-hook-session-setup-fail.conf \
	scripts/script-hook-session-setup-missing.conf \
	scripts/session-stdout.conf \
	scripts/session-stderr.conf \
	scripts/session-stderr-multi-write.conf \
	scripts/session-stderr-backup.conf \
	scripts/switch-to-greeter.conf \
	scripts/switch-to-greeter-disabled.conf \
	scripts/switch-to-greeter-new-session.conf \
	scripts/switch-to-greeter-resettable.conf \
	scripts/switch-to-greeter-return-session.conf \
	scripts/switch-to-greeter-return-session-logout.conf \
	scripts/switch-to-greeter-return-session-pam.conf \
	scripts/switch-to-guest.conf \
	scripts/switch-to-guest-disabled.conf \
	scripts/switch-to-guest-fail-resettable.conf \
	scripts/switch-to-user.conf \
	scripts/switch-to-users.conf \
	scripts/switch-to-user-active.conf \
	scripts/switch-to-user-disabled.conf \
	scripts/switch-to-user-existing.conf \
	scripts/switch-to-user-existing-no-password.conf \
	scripts/switch-to-user-existing-resettable.conf \
	scripts/switch-to-user-logout-active.conf \
	scripts/switch-to-user-logout-active-resettable.conf \
	scripts/switch-to-user-logout-inactive.conf \
	scripts/switch-to-user-no-password.conf \
	scripts/switch-to-user-resettable.conf \
	scripts/system-xauthority.conf \
	scripts/unity-autologin.conf \
	scripts/unity-compositor-command.conf \
	scripts/unity-compositor-crash.conf \
	scripts/unity-compositor-fail-ready.conf \
	scripts/unity-compositor-fail-start.conf \
	scripts/unity-compositor-fallback.conf \
	scripts/unity-compositor-mir-next-session.conf \
	scripts/unity-compositor-next-session.conf \
	scripts/unity-compositor-not-found.conf \
	scripts/unity-login.conf \
	scripts/unity-mir-autologin.conf \
	scripts/unity-mir-greeter-mir-session.conf \
	scripts/unity-mir-lock-seat.conf \
	scripts/unity-mir-greeter-x-session.conf \
	scripts/unity-mir-session-x-greeter.conf \
	scripts/unity-mir-switch.conf \
	scripts/unity-mir-switch-to-user-resettable.conf \
	scripts/unity-plymouth.conf \
	scripts/unity-switch.conf \
	scripts/upstart-autologin.conf \
	scripts/upstart-login.conf \
	scripts/users.conf \
	scripts/user-background.conf \
	scripts/user-has-messages.conf \
	scripts/user-image.conf \
	scripts/user-layout.conf \
	scripts/user-logged-in.conf \
	scripts/user-name.conf \
	scripts/user-renamed.conf \
	scripts/user-renamed-invalid.conf \
	scripts/user-session.conf \
	scripts/user-uid.conf \
	scripts/utmp-autologin.conf \
	scripts/utmp-login.conf \
	scripts/utmp-wrong-password.conf \
	scripts/vnc-command.conf \
	scripts/vnc-dimensions.conf \
	scripts/vnc-login.conf \
	scripts/vnc-open-file-descriptors.conf \
	scripts/xauthority.conf \
	scripts/xdg-current-desktop.conf \
	scripts/xdmcp-client.conf \
	scripts/xdmcp-server-autologin.conf \
	scripts/xdmcp-server-double-login.conf \
	scripts/xdmcp-server-login.conf \
	scripts/xdmcp-server-open-file-descriptors.conf \
	scripts/xserver-fail-start.conf \
	scripts/xserver-no-share.conf
